# sootlib

./: BUG_REPORT.md
Make/: files  options
chemistryModels/coagulationModels/: coagulationModel.H  coagulationModel_FUCHS.C  coagulationModel_FUCHS.H  coagulationModel_HM.C  coagulationModel_HM.H  coagulationModel_NONE.H
chemistryModels/growthModels/: growthModel.C  growthModel.H  growthModel_FAIR.C  growthModel_HACA.C  growthModel_LL.C  growthModel_LL.H  growthModel_MB.C  growthModel_MB.H  growthModel_NONE.H
chemistryModels/nucleationModels/: nucleationModel.C  nucleationModel_AJ_RED.C  nucleationModel_BROWN.C  nucleationModel_BROWN.H  nucleationModel_LINA1.C  nucleationModel_LINA1.H  nucleationModel_LL.H  nucleationModel_MB.H  nucleationModel_NONE.H  (+1 more)
examples/: CMakeLists.txt
examples/burner_flame/: .gitignore  burner_flame.C  burner_flame_tar.cc
examples/burner_flame/Make/: files  options
examples/burner_flame/Make/darwin64ClangDPInt32Opt/: burner_flame.C.dep  options  sourceFiles  variables
examples/simple/: simple_example.C
examples/simple/Make/: files
examples/simple/Make/darwin64ClangDPInt32Opt/: options  simple_example.C.dep  sourceFiles  variables
sootModels/: Allwmake  README copy.md  README.md  sootDefs.H  sootHeaders.H  sootModel.C  sootModel.H  sootModel_LOGN.C  sootModel_LOGN.H  sootModel_MOMIC.C  sootModel_MOMIC.H  sootModel_MONO.C  sootModel_MONO.H  sootModel_QMOM.C  sootModel_QMOM.H  sootModel_SECT.C  sootModel_SECT.H  state.C  state.H
src/: sootModel_LOGN.cc  sootModel_MOMIC.cc  sootModel_QMOM.cc  sootModel_SECT.cc
(+48 files in other folders)
